--- a/README.rdoc
+++ b/README.rdoc
@@ -18,7 +18,7 @@ rake db:generate:migration_sql
 
 * May fail on migrations that perform CRUD via ActiveRecord methods
 * With the mysql adapter, fails on change_column, rename_column
-* Fails on redhillonrails_core plugin with the most adapters
+* Fails on redhillonrails_core plugin with the mysql adapter
 
 == Credits
 
